# sunbears

./: .gitattributes  .gitignore  Cargo.toml  LICENSE  README.md  index.d.ts  index.js  package.json  tsconfig.json
.github/workflows/: CI.yml
__test__/: index.spec.ts
benchmark/: bench-alt.ts  bench.ts
src/: lib.rs
testfiles/: comparative_bench.py  err-typed-col-1.csv  err-typed-col-2.csv  generate_test_files.py  generated-100.csv  with-nulls.csv
