
[package]
authors = ["Clelia Astra Bertelli <astraberte9@gmail.com>"]
edition = "2021"
name    = "sunbears"
version = "0.1.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow      = "1.0.102"
csv         = "1.4.0"
itoa        = "1.0.18"
napi        = { version = "3.0.0", features = ["anyhow"] }
napi-derive = "3.0.0"
ryu         = "1.0.23"

[build-dependencies]
napi-build = "2"

[profile.release]
lto   = true
strip = "symbols"
